// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createFsRouteTree > basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "dynamic": {
          "children": {
            "[id]": {
              "children": {
                "[nested]": {
                  "value": {
                    "page": "/dynamic/[id]/[nested]/page.tsx",
                  },
                },
              },
              "value": {
                "layout": "/dynamic/[id]/layout.tsx",
                "page": "/dynamic/[id]/page.tsx",
              },
            },
            "catchall": {
              "children": {
                "[...any]": {
                  "value": {
                    "page": "/dynamic/catchall/[...any]/page.tsx",
                  },
                },
                "static": {
                  "value": {
                    "page": "/dynamic/catchall/static/page.tsx",
                  },
                },
              },
              "value": {
                "page": "/dynamic/catchall/page.tsx",
              },
            },
            "static": {
              "value": {
                "page": "/dynamic/static/page.tsx",
              },
            },
          },
          "value": {
            "layout": "/dynamic/layout.tsx",
            "page": "/dynamic/page.tsx",
          },
        },
        "other": {
          "value": {
            "page": "/other/page.tsx",
          },
        },
        "test": {
          "children": {
            "other": {
              "value": {
                "page": "/test/other/page.tsx",
              },
            },
          },
          "value": {
            "layout": "/test/layout.tsx",
            "page": "/test/page.tsx",
          },
        },
      },
      "value": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
    },
  },
}
`;

exports[`createFsRouteTree > basic 2`] = `
{
  "__pathname": "/",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 3`] = `
{
  "__pathname": "/other",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "page": "/other/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "other",
        ],
      ],
      "prefix": "/other",
      "type": "layout",
    },
    {
      "node": {
        "page": "/other/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "other",
        ],
      ],
      "prefix": "/other",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 4`] = `
{
  "__pathname": "/not-found",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 5`] = `
{
  "__pathname": "/test",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/test/layout.tsx",
        "page": "/test/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
      ],
      "prefix": "/test",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/test/layout.tsx",
        "page": "/test/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
      ],
      "prefix": "/test",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 6`] = `
{
  "__pathname": "/test/other",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/test/layout.tsx",
        "page": "/test/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
      ],
      "prefix": "/test",
      "type": "layout",
    },
    {
      "node": {
        "page": "/test/other/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
        [
          null,
          "other",
        ],
      ],
      "prefix": "/test/other",
      "type": "layout",
    },
    {
      "node": {
        "page": "/test/other/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
        [
          null,
          "other",
        ],
      ],
      "prefix": "/test/other",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 7`] = `
{
  "__pathname": "/test/not-found",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/test/layout.tsx",
        "page": "/test/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
      ],
      "prefix": "/test",
      "type": "layout",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 8`] = `
{
  "__pathname": "/dynamic",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 9`] = `
{
  "__pathname": "/dynamic/static",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/static/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "static",
        ],
      ],
      "prefix": "/dynamic/static",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/static/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "static",
        ],
      ],
      "prefix": "/dynamic/static",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 10`] = `
{
  "__pathname": "/dynamic/abc",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/[id]/layout.tsx",
        "page": "/dynamic/[id]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
      ],
      "prefix": "/dynamic/abc",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/[id]/layout.tsx",
        "page": "/dynamic/[id]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
      ],
      "prefix": "/dynamic/abc",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 11`] = `
{
  "__pathname": "/dynamic/abc/def",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/[id]/layout.tsx",
        "page": "/dynamic/[id]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
      ],
      "prefix": "/dynamic/abc",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/[id]/[nested]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
        [
          "nested",
          "def",
        ],
      ],
      "prefix": "/dynamic/abc/def",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/[id]/[nested]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
        [
          "nested",
          "def",
        ],
      ],
      "prefix": "/dynamic/abc/def",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 12`] = `
{
  "__pathname": "/dynamic/%E2%9C%85",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/[id]/layout.tsx",
        "page": "/dynamic/[id]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "✅",
        ],
      ],
      "prefix": "/dynamic/%E2%9C%85",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/[id]/layout.tsx",
        "page": "/dynamic/[id]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "✅",
        ],
      ],
      "prefix": "/dynamic/%E2%9C%85",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 13`] = `
{
  "__pathname": "/dynamic/catchall",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "prefix": "/dynamic/catchall",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "prefix": "/dynamic/catchall",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 14`] = `
{
  "__pathname": "/dynamic/catchall/static",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "prefix": "/dynamic/catchall",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/static/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          null,
          "static",
        ],
      ],
      "prefix": "/dynamic/catchall/static",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/static/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          null,
          "static",
        ],
      ],
      "prefix": "/dynamic/catchall/static",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 15`] = `
{
  "__pathname": "/dynamic/catchall/x",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "prefix": "/dynamic/catchall",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x",
        ],
      ],
      "prefix": "/dynamic/catchall/x",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x",
        ],
      ],
      "prefix": "/dynamic/catchall/x",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 16`] = `
{
  "__pathname": "/dynamic/catchall/x/y",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "prefix": "/dynamic/catchall",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y",
        ],
      ],
      "prefix": "/dynamic/catchall/x/y",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y",
        ],
      ],
      "prefix": "/dynamic/catchall/x/y",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 17`] = `
{
  "__pathname": "/dynamic/catchall/x/y/z",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "prefix": "/dynamic/catchall",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y/z",
        ],
      ],
      "prefix": "/dynamic/catchall/x/y/z",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y/z",
        ],
      ],
      "prefix": "/dynamic/catchall/x/y/z",
      "type": "page",
    },
  ],
}
`;

exports[`matchRouteTree2 > dynamic not-found 1`] = `
{
  "children": {
    "": {
      "children": {
        "[x]": {
          "children": {
            "b": {
              "children": {
                "d": {
                  "value": {
                    "page": "/[x]/b/d/page.js",
                  },
                },
              },
            },
          },
          "value": {
            "not-found": "/[x]/not-found.js",
          },
        },
        "a": {
          "children": {
            "b": {
              "children": {
                "c": {
                  "value": {
                    "page": "/a/b/c/page.js",
                  },
                },
              },
            },
          },
          "value": {
            "not-found": "/a/not-found.js",
          },
        },
      },
    },
  },
}
`;

exports[`matchRouteTree2 > dynamic not-found 2`] = `
{
  "_pathname": "/a/b/c",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "b",
      },
    },
    {
      "node": {
        "page": "/a/b/c/page.js",
      },
      "segment": {
        "type": "static",
        "value": "c",
      },
    },
    {
      "node": {
        "page": "/a/b/c/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > dynamic not-found 3`] = `
{
  "_pathname": "/a/b/d",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "b/d",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > dynamic not-found 4`] = `
{
  "_pathname": "/x/b/e",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/[x]/not-found.js",
      },
      "segment": {
        "key": "x",
        "type": "dynamic",
        "value": "x",
      },
    },
    {
      "node": {
        "not-found": "/[x]/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "b/e",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > group routes basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "(x)": {
          "children": {
            "b": {
              "value": {
                "page": "/(x)/b/page.js",
              },
            },
            "d": {
              "children": {
                "(y)": {
                  "value": {
                    "page": "/(x)/d/(y)/page.js",
                  },
                },
              },
            },
          },
        },
        "a": {
          "value": {
            "page": "/a/page.js",
          },
        },
        "c": {
          "children": {
            "(x)": {
              "value": {
                "page": "/c/(x)/page.js",
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`matchRouteTree2 > group routes basic 2`] = `
{
  "_pathname": "/a",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "page": "/a/page.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": {
        "page": "/a/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > group routes basic 3`] = `
{
  "_pathname": "/b",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": undefined,
      "segment": {
        "key": "x",
        "type": "group",
      },
    },
    {
      "node": {
        "page": "/(x)/b/page.js",
      },
      "segment": {
        "type": "static",
        "value": "b",
      },
    },
    {
      "node": {
        "page": "/(x)/b/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > group routes basic 4`] = `
{
  "_pathname": "/c",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "c",
      },
    },
    {
      "node": {
        "page": "/c/(x)/page.js",
      },
      "segment": {
        "key": "x",
        "type": "group",
      },
    },
    {
      "node": {
        "page": "/c/(x)/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > group routes basic 5`] = `
{
  "_pathname": "/d",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": undefined,
      "segment": {
        "key": "x",
        "type": "group",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "d",
      },
    },
    {
      "node": {
        "page": "/(x)/d/(y)/page.js",
      },
      "segment": {
        "key": "y",
        "type": "group",
      },
    },
    {
      "node": {
        "page": "/(x)/d/(y)/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > group routes not-found 1`] = `
{
  "children": {
    "": {
      "children": {
        "(x)": {
          "children": {
            "a": {
              "children": {
                "c": {
                  "value": {
                    "not-found": "/(x)/a/c/not-found.js",
                    "page": "/(x)/a/c/page.js",
                  },
                },
              },
              "value": {
                "not-found": "/(x)/a/not-found.js",
              },
            },
            "p": {
              "children": {
                "q": {
                  "value": {
                    "page": "/(x)/p/q/page.js",
                  },
                },
              },
              "value": {
                "not-found": "/(x)/p/not-found.js",
              },
            },
          },
        },
        "a": {
          "children": {
            "b": {
              "value": {
                "page": "/a/b/page.js",
              },
            },
          },
          "value": {
            "not-found": "/a/not-found.js",
          },
        },
      },
    },
  },
}
`;

exports[`matchRouteTree2 > group routes not-found 2`] = `
{
  "_pathname": "/a/u",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "u",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > group routes not-found 3`] = `
{
  "_pathname": "/a/c/u",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "c/u",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > group routes not-found 4`] = `
{
  "_pathname": "/p/u",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": undefined,
      "segment": {
        "key": "x",
        "type": "group",
      },
    },
    {
      "node": {
        "not-found": "/(x)/p/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "p",
      },
    },
    {
      "node": {
        "not-found": "/(x)/p/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "u",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > withMatchRouteId > basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "a": {
          "children": {
            "b": {
              "value": {
                "page": "/a/b/page.js",
              },
            },
          },
          "value": {
            "not-found": "/a/not-found.js",
            "page": "/a/page.js",
          },
        },
      },
      "value": {
        "page": "/page.js",
      },
    },
  },
}
`;

exports[`matchRouteTree2 > withMatchRouteId > basic 2`] = `
{
  "_pathname": "/a",
  "matches": [
    {
      "id": ":static",
      "node": "_",
      "params": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/a:static",
      "node": "_",
      "params": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
      ],
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "id": "/a/:page",
      "node": "_",
      "params": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
        {
          "type": "page",
        },
      ],
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > withMatchRouteId > basic 3`] = `
{
  "_pathname": "/a/b",
  "matches": [
    {
      "id": ":static",
      "node": "_",
      "params": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/a:static",
      "node": "_",
      "params": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
      ],
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "id": "/a/b:static",
      "node": "_",
      "params": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
        {
          "type": "static",
          "value": "b",
        },
      ],
      "segment": {
        "type": "static",
        "value": "b",
      },
    },
    {
      "id": "/a/b/:page",
      "node": "_",
      "params": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
        {
          "type": "static",
          "value": "b",
        },
        {
          "type": "page",
        },
      ],
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > withMatchRouteId > basic 4`] = `
{
  "_pathname": "/a/b/c",
  "matches": [
    {
      "id": ":static",
      "node": "_",
      "params": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/a:static",
      "node": "_",
      "params": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
      ],
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "id": "/a/b/c:not-found",
      "node": "_",
      "params": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
        {
          "type": "not-found",
          "value": "b/c",
        },
      ],
      "segment": {
        "type": "not-found",
        "value": "b/c",
      },
    },
  ],
}
`;
